<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Ninja</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">MainActivity</string>
    <string name="title_activity_game">Game</string>
    <string name="play">Play Now</string>
    <string name="set">Setting</string>
    <string name="ex">Exit</string>
    <string name="title_activity_setting">Setting</string>
    <string name="vol">Volume</string>
    <string name="high_score">High Score </string>
    <string name="about_me">About Us </string>
        <string name="about_us">Name : Ali Mohsin </string>
    <string name="title_activity_aboutus">AboutusActivity</string>
    
    <string name="version">Version : 1.0.0 </string>
        <string name="game_Help">Help : Pick Ninjas to increase score and Hearts to increase power.Save your player from Sharugan by jumping. </string>
    <string name="back">Go Back</string>
      <string name="enter_name">Enter Name</string>
        <string name="save">Save</string>
          <string name="Player">Player</string>
          <string name="Play">Play</string>
                    <string name="top">Top</string>
                    <string name="name">Name</string>
                    <string name="sc">Score</string>           
</resources>