<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bak"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/srool"
        android:onClick="highscore"
        android:text="@string/high_score" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="@drawable/srool"
        android:onClick="setting"
        android:text="@string/set" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_centerVertical="true"
        android:background="@drawable/srool"
        android:onClick="exit"
        android:text="@string/ex" />

    <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button4"
        android:background="@drawable/srool"
        android:onClick="aboutus"
        android:text="@string/about_me" />

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignParentBottom="true"
        android:background="@drawable/srool"
        android:onClick="play"
        android:text="@string/play" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Android Ninja "
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fcdd82"
        android:textSize="35sp"
        android:textStyle="italic" />

</RelativeLayout>